--- a/flags/composer.json
+++ b/flags/composer.json
@@ -22,6 +22,6 @@
         }
     },
     "scripts": {
-        "start": "php -S localhost:8080 -t public"
+        "start": "php -S localhost:8080 -t html"
     }
 }
