--- a/flags/composer.json
+++ b/flags/composer.json
@@ -13,8 +13,7 @@
     },
     "config": {
         "process-timeout": 0,
-        "sort-packages": true,
-        "vendor-dir": "/var/lib/composer-vendor"
+        "sort-packages": true
     },
     "autoload": {
         "psr-4": {
